src/test/ui/object-lifetime/object-lifetime-default-from-rptr-struct-error.stderr
error[E0308]: mismatched types
  --> $DIR/object-lifetime-default-from-rptr-struct-error.rs:31:12
   |
LL |     ss.t = t; //~ ERROR mismatched types
   |            ^ lifetime mismatch
   |
   = note: expected type `&'a MyBox<(dyn Test + 'static)>`
              found type `&'a MyBox<(dyn Test + 'a)>`
note: the lifetime 'a as defined on the function body at 30:6...
  --> $DIR/object-lifetime-default-from-rptr-struct-error.rs:30:6
   |
LL | fn c<'a>(t: &'a MyBox<Test+'a>, mut ss: SomeStruct<'a>) {
   |      ^^
   = note: ...does not necessarily outlive the static lifetime

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
